--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                                             <input type="email" class="form-control" name="email" placeholder="Email">
                                             <input type="text" class="form-control" name="phone" placeholder="Telephone">
                                             <input type="text" class="form-control" name="location" placeholder="Location">
-                                            <button type="submit" class="btn btn-primary text-uppercase" name="button">request a callback</button>
+                                            <button type="submit" class="btn-green" name="button">request a callback</button>
                                         </div>
                                     </form>
                                 </div>
@@ -118,8 +118,43 @@
                     </div>
                 </section>
 
-                <section>
+                <section class="service-offers">
                     <!-- service offers -->
+                    <div class="container">
+                        <div class="row text-center">
+                            <div class="col-lg-5 courses">
+                                <h2>Courses</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultrices auctor sapien id cursus. Aliquam maximus turpis in vehicula semper.</p>
+                                <button class="btn-green">Course information</button>
+                            </div>
+                            <div class="col-lg-7">
+                                <div class="row services">
+                                    <div class="col-lg-4">
+                                        <div>
+                                            <img src="img/courses-passplus.jpg" alt="courses-passplus">
+                                        </div>
+                                        <h4>Pass Plus</h4>
+                                        <button class="btn-blue">Learn More</button>
+                                    </div>
+                                    <div class="col-lg-4">
+                                        <div>
+                                            <img src="img/course-intensive.jpg" alt="course-intensive">
+                                        </div>
+                                        <h4>Intensive Course</h4>
+                                        <button class="btn-blue">Learn More</button>
+                                    </div>
+                                    <div class="col-lg-4">
+                                        <div>
+                                            <img src="img/courses-instructor.jpg" alt="courses-instructor">
+                                        </div>
+                                        <h4>Instructors</h4>
+                                        <button class="btn-blue">Learn More</button>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
                 </section>
 
                 <section>
